2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-compiler-notes-mode, slime-connection-ist-mode):
	Add slime-temp-buffer-mode-map to docstring.

2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-connections-buffer-name): New variable.
	(slime-list-connections): Use it.
	(def-slime-selector ?c): Ditto

2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el: Make the threads browser use `slime-with-temp-buffer'.

	(slime-temp-buffer-quit-function): New buffer-local
	variable. Defaults to `slime-temp-buffer-quit'.
	(slime-temp-buffer-mode): `q' invokes above variable now.

	(slime-threads-buffer-name): New variable.
	(slime-list-threads): Use slime-with-temp-buffer.
	(slime-update-threads-buffer): New. Lifted from
	slime-list-threads.
	(slime-thread-quit): Renamed to slime-quit-threads-buffer.

2008-08-08  Helmut Eller  <heller@common-lisp.net>

	Spawn the auto-flush thread in the front end.
	This removes some copy&paste code in various backends.

	* swank.lisp (auto-flush-loop): New function.
	(open-streams): Use it.
	* swank-backend.lisp (make-stream-interactive): Deleted.

2008-08-08  Helmut Eller  <heller@common-lisp.net>

	* slime.el (test disconnect): Call slime-inferior-process
	with explicit connection argument to avoid clashes with
	buffer-local connections.

2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-create-macroexpansion-buffer): Make fontifying
	case insensitive as the result from macroexpansion is most likely
	printed all upper-case.

2008-08-07  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-with-temp-buffer): By default, no longer inherit
	the current connection.

2008-08-07  Tobias C. Rittweiler  <tcr@freebits.de>

	Previously, M-p at the REPL deleted the input if no match could be
	found in the history. Now the input is untouched.

	* slime.el (slime-repl-history-replace): Ditch delete-at-end-p
	argument.